--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
-  "name": "my-newtw",
+  "name": "vite-tailwind-app",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "typescript": "~5.8.3",
-    "vite": "^7.1.2"
-  },
-  "dependencies": {
-    "@tailwindcss/vite": "^4.1.13",
-    "tailwind": "^2.3.1",
-    "tailwindcss": "^4.1.13"
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
+    "vite": "^5.4.8"
   }
 }
